# TSS.MSR

./: .gitignore  README.md
TSS.CPP/Samples/: Samples.cpp
TSS.CPP/Src/: Tpm2.cpp  TpmHelpers.cpp  TpmTypes.cpp
TSS.CPP/include/: TpmTypes.h
TSS.JS/src/: TpmBase.ts  TpmTypes.ts
TSS.Java/src/tss/tpm/: SignResponse.java  TPM2_TestParms_REQUEST.java  TPMA_CC.java  TPMA_NV.java  TPMA_STARTUP_CLEAR.java  TPMA_X509_KEY_USAGE.java  TPMS_CAPABILITY_DATA.java  TPMS_KEYEDHASH_PARMS.java  TPMT_ASYM_SCHEME.java  TPMT_ECC_SCHEME.java  TPMT_KDF_SCHEME.java  TPMT_KEYEDHASH_SCHEME.java  TPMT_PUBLIC.java  TPMT_PUBLIC_PARMS.java  TPMT_RSA_DECRYPT.java  TPMT_RSA_SCHEME.java  TPMT_SENSITIVE.java  TPMT_SIGNATURE.java  TPMT_SIG_SCHEME.java  TPMT_SYM_DEF.java  TPMT_SYM_DEF_OBJECT.java  TPM_NV_INDEX.java
TSS.NET/TSS.Net/: X_TpmDefs.cs
TSS.Py/src/: TpmTypes.py
TSS.Rust/: Cargo.toml  README.md  clippy.toml
TSS.Rust/examples/: README.md  tpm_samples.rs
TSS.Rust/src/: auth_session.rs  crypto.rs  device.rs  error.rs  lib.rs  policy.rs  tpm2.rs  tpm2_helpers.rs  tpm2_impl.rs  tpm_buffer.rs  tpm_extensions.rs.snips  tpm_structure.rs  tpm_type_extensions.rs  tpm_types.rs  tpm_types_impl.rs
TssCodeGen/: README.md
TssCodeGen/src/: CGenJava.cs  CGenNode.cs  CGenRust.cs  CGenRust2.cs  CGenRust_Fixes.cs  CodeGenBase.cs  Expression.cs  TargetLang.cs  TpmTranslations.cs  TpmTypes.cs
